# 3ZCalculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
res/: loadable_objects.toml  message.txt  settings.json
res/agents/: 1091.json  1091.toml
res/data/agents/: 1091.json  1261.json
res/data/dds/: 31000.json  31100.json  31200.json  31300.json  31400.json  31500.json  31600.json  31800.json  31900.json  32200.json  32300.json  32400.json  32500.json  32600.json  32700.json  32800.json
res/data/rotations/1091/: 0.json  1.json
res/data/wengines/: 13003.json  13008.json  13009.json  14109.json  14118.json
res/dds/: 32800.json  32800.toml
res/drive_discs/: 31000.toml  32700.toml  32800.toml
res/info/: agents.csv  dds.csv  wengines.csv
res/players/: 1500438496.toml
res/request_examples/: get_dmg_response.json
res/request_tests/: get_dmg.js
res/rotations/: 1091.toml
res/tests/examples/: get_dmg.json  post.http  requests.http
res/tests/templates/: get_dmg_request.json  post_rotation_request.json
res/wengines/: 14109.toml
src/backend/: adaptors.cpp  adaptors.hpp  backend.cpp  backend.hpp  calculator.cpp  calculator.hpp  converters.cpp  converters.hpp  details.hpp  export_data.hpp  logger.cpp  logger.hpp  object_manager.cpp  object_manager.hpp
src/backend/impl/: details.cpp  details.hpp  requests.cpp  requests.hpp
src/calc/: calculator.cpp  calculator.hpp  details.hpp
src/calculator/: calculator.cpp  calculator.hpp  converters.cpp  converters.hpp  details.hpp
src/math/: parser.cpp  parser.hpp
src/utl/: json.cpp  json.hpp
src/zzz/: combat.hpp  details.hpp  enums.cpp  enums.hpp  stats.cpp  stats.hpp  stats_grid.cpp  stats_grid.hpp  stats_math.hpp
src/zzz/combat/: drive_disc_piece.cpp  drive_disc_piece.hpp
src/zzz/details/: agent.cpp  agent.hpp  anomaly.cpp  anomaly.hpp  ddp.cpp  ddp.hpp  dds.cpp  dds.hpp  drive_disc_set.cpp  drive_disc_set.hpp  rotation.cpp  rotation.hpp  skill.cpp  skill.hpp  wengine.cpp  wengine.hpp
src/zzz/stats/: basic.hpp  grid.cpp  grid.hpp  regular.cpp  regular.hpp  relative.cpp  relative.hpp
toolchains/: bootstrap.cmake  clang.cmake
